# Apollo

./: .clang-format  .clangd  .gitignore  .gitmodules  Build.py  CMakeLists.txt  CMakePresets.json  FormatSources.py  Icon.afdesign  README.md
bench/: CMakeLists.txt  MemoryBenchmarks.cpp
cmake/: Embed.cmake  Findslang.cmake  SPIRV.cmake  Shaders.cmake  TargetMacros.cmake  TestMacros.cmake
data/shaders/: Apollo.Core.slang  CMakeLists.txt  EmbedShader.cmake  EmbedUi.cmake  ShaderTemplate.hpp  UiBorder.slang  UiRect.slang
data/shaders/ui/: border.frag.hlsl  border.vert.hlsl  rect.frag.hlsl  rect.vert.hlsl
docs/: Doxyfile  Guide.dox  SpecialMacros.dox  extra.css  header.html  index.dox  style.css
docs/guide/: AddSystemExample.cpp  Assets.dox  ECS.dox  Entry.dox  EntryExample.cpp  Rendering.dox  Rendering.hpp  Transform.hpp
example/: CMakeLists.txt  Camera.hpp  CameraSystem.cpp  CameraSystem.hpp  DemoPCH.hpp  DemoScenes.hpp  GridSystem.hpp  Inspector.cpp  Inspector.hpp  MeshComponent.hpp  Text.cpp  Text.hpp  UiSystem.cpp  UiSystem.hpp  Viewport.hpp  VisualComponents.hpp  VisualSystem.cpp  VisualSystem.hpp  descIndex.scn  main.cpp  main.scn  metadata.csv
example/assets/: arial.atlas  cube.matinstance  cube2.matinstance  cube3.matinstance  empire.atlas  grid.frag.hlsl  grid.frag.slang  grid.mat  grid.matinstance  grid.vert.hlsl  grid.vert.slang  rectangle.frag.hlsl  rectangle.mat  rectangle.vert.hlsl  solidMesh.frag.hlsl  solidMesh.frag.slang  solidMesh.mat  solidMesh.vert.hlsl  solidMesh.vert.slang  text.frag.hlsl  text.frag.slang  text.mat  text.vert.hlsl  text.vert.slang  texturedQuad.frag.hlsl  texturedQuad.frag.slang  texturedQuad.mat  texturedQuad.vert.hlsl  texturedQuad.vert.slang  translucentMesh.frag.hlsl  translucentMesh.frag.slang  translucentMesh.mat
source/: CMakeLists.txt  PCH.hpp  Test.vert.hlsl
source/asset/: Asset.cpp  Asset.hpp  AssetFunctions.hpp  AssetLoader.cpp  AssetLoader.hpp  AssetManager.cpp  AssetManager.hpp  AssetRef.cpp  AssetRef.hpp  CMakeLists.txt  Importer.hpp  Scene.cpp  Scene.hpp
source/core/: App.cpp  App.hpp  Assert.hpp  Bit.hpp  Blob.hpp  CMakeLists.txt  Coroutine.hpp  Enum.hpp  Errno.cpp  Errno.hpp  FieldList.hpp  GameTime.cpp  GameTime.hpp  Hash.hpp  HashedString.hpp  Json.hpp  JsonFwd.hpp  KeyCodes.hpp  Log.cpp  Log.hpp  Map.hpp  Math.hpp  Memory.cpp  Memory.hpp  NumConv.hpp  Poly.hpp  Queue.hpp  RNG.cpp  RNG.hpp  Rectangle.hpp  RetainPtr.hpp  Singleton.hpp  StaticStorage.hpp  StringHash.hpp  ThreadPool.hpp  Transform.hpp  TypeInfo.cpp  TypeInfo.hpp  TypeList.hpp  TypeTraits.hpp  (+9 more)
source/ecs/: CMakeLists.txt  ComponentRegistry.hpp  Manager.cpp  Manager.hpp  Reflection.hpp  System.cpp  System.hpp
source/editor/: AssetImporters.cpp  AssetImporters.hpp  CMakeLists.txt  Editor.cpp  Editor.hpp  LoadMaterial.cpp  LoadShader.cpp  RegisterComponents.cpp
source/editor/asset/: AssetHelper.hpp  AssetLoaders.hpp  LoadFont.cpp  LoadMaterial.cpp  LoadMesh.cpp  LoadMetadata.cpp  LoadScene.cpp  LoadShader.cpp  LoadTexture.cpp  Manager.cpp  Manager.hpp
source/editor/schema/: fontAtlas.schema.json  material.schema.json  materialInstance.schema.json  scene.schema.json  ulid.schema.json
source/entry/: CMakeLists.txt  EditorEntry.cpp  Entry.cpp  Entry.hpp  GameEntry.cpp  GameState.hpp
source/rendering/: Batch.hpp  Bitmap.hpp  Buffer.cpp  Buffer.hpp  CMakeLists.txt  Command.cpp  Command.hpp  Context.cpp  Context.hpp  Device.cpp  Device.hpp  GpuAlign.hpp  HandleWrapper.hpp  Material.cpp  Material.hpp  Mesh.hpp  Pipeline.cpp  Pipeline.hpp  Pixel.hpp  RenderPass.cpp  RenderPass.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  ShaderInfo.cpp  ShaderInfo.hpp  Texture.cpp  Texture.hpp  VertexLayout.hpp  VertexTypes.cpp  VertexTypes.hpp
source/rendering/text/: AtlasGenerator.cpp  BatchRenderer.cpp  BatchRenderer.hpp  FontAtlas.cpp  FontAtlas.hpp  Glyph.hpp  Style.hpp
source/systems/: CMakeLists.txt  InputEventComponents.hpp  InputSystem.cpp  InputSystem.hpp  RegisterCoreSystems.cpp  SceneComponents.hpp  SceneLoadingSystem.cpp  SceneLoadingSystem.hpp  TransformComponent.hpp
source/tools/: ArgParse.hpp  AtlasGen.cpp  CMakeLists.txt  ShaderCompiler.cpp  ShaderCompiler.hpp  ULIDGen.cpp  shaderc.cpp
source/ui/: CMakeLists.txt  Context.cpp  Context.hpp  Element.cpp  Element.hpp  Renderer.cpp  Renderer.hpp
tests/: AssetLoadTaskTests.cpp  AssetLoaderTests.cpp  BitSpanTests.cpp  BitTests.cpp  BitmapTests.cpp  BlobTests.cpp  CMakeLists.txt  ComponentRegistryTests.cpp  CoroutineTests.cpp  EnumTests.cpp  GraphicsPipelineTests.cpp  HashTests.cpp  JsonTests.cpp  MathTests.cpp  MemoryPoolTests.cpp  MetaTests.cpp  NumConvTests.cpp  QueueTests.cpp  RectTests.cpp  RetainPtrTests.cpp  SceneLoadingTests.cpp  SlangTests.cpp  SystemTests.cpp  ThreadPoolTests.cpp  TypeInfoTests.cpp  ULIDTests.cpp  UniqueFunctionTests.cpp  UtilTests.cpp  VertexTests.cpp  main.cpp
tests/data/: test1.slang  test2.slang  test3.slang
